[tool.poetry]
name = "fighter-jet-api"
version = "0.1.0"
description = "An API that serves fighter jet specifications."
authors = ["Raymond DeVries"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^3.11.0"
fastapi = {extras = ["all"], version = "^0.61.1"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
